--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "pydantic (>=2.10.6,<3.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "sqlalchemy (>=2.0.37,<3.0.0)",
+    "sqlalchemy[asyncpg] (>=2.0.37,<3.0.0)",
     "fastapi-limiter (>=0.1.6,<0.2.0)",
     "pydantic-settings (>=2.7.1,<3.0.0)",
     "uvicorn[standard] (>=0.34.0,<0.35.0)",
