--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,14 +7,27 @@ services:
       - ./.env
     environment:
       TYPE_ENV: docker
-    command: "uvicorn asgi:app --host 0.0.0.0 --port 58485"
+    command: bash -c "alembic upgrade head && uvicorn asgi:app --host 0.0.0.0 --port 58485"
     restart: always
     ports:
       - "58485:58485"
     networks:
       - redis
 
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      interval: 1s
+      timeout: 3s
+      retries: 5
+    restart: always
+    networks:
+      - redis
+
 networks:
   redis:
-    external: true
     name: redis
