--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "fastapi-limiter (>=0.1.6,<0.2.0)",
     "pydantic-settings (>=2.7.1,<3.0.0)",
     "uvicorn[standard] (>=0.34.0,<0.35.0)",
-    "alembic (>=1.14.1,<2.0.0)"
+    "alembic (>=1.14.1,<2.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "bcrypt (>=4.2.1,<5.0.0)"
 ]
 
 [tool.poetry]
